SERVER-31469: Export queryable_wt entry function for windows and normalize dbpath tracking.

GitOrigin-RevId: 3bb40ba02b31e6685e84b576b533725b8beb6d20